--- a/_manuscript/index.embed.ipynb
+++ b/_manuscript/index.embed.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "Abstract here."
    ],
-   "id": "6b075324-1bd5-489c-af4c-bce666fc502f"
+   "id": "4c8a9ddd-77cc-493f-aa6d-86bbd4e996be"
   },
   {
    "cell_type": "code",
@@ -51,7 +51,7 @@
     "\n",
     "library(tidyverse)"
    ],
-   "id": "f797a711-7276-4f1d-a5f0-fb8c8fbbf9cc"
+   "id": "f5a84d60-9dd3-4abe-a165-758c061f1afc"
   },
   {
    "cell_type": "markdown",
@@ -61,23 +61,25 @@
     "\n",
     "Personal sensing is the collection and analyses of data collected via smartphone and other digital devices in the context of one’s day-to-day life \\[@mohrPersonalSensingUnderstanding2017\\].\n",
     "\n",
-    "Personal sensing data can be used as inputs into machine learning algorithms to predict important psychological clinical outcomes. Existing literature suggests behavior (substance use \\[@wyantMachineLearningModels2024; @wyantLaggedPredictionsNextinprep; @chihPredictiveModelingAddiction2014; @businelleUsingIntensiveLongitudinal2016; @hebertPredictingFirstSmoking2021; @baeMobilePhoneSensors2018; @waltersUsingMachineLearning2021; @robertsUsingMachineLearning2022; @baeLeveragingMobilePhone2023\\]), mood (depression \\[@jacobsonPassiveSensingPrediction2020; @kimDepressionPredictionUsing2019; @razaviDepressionScreeningUsing2020\\]; anxiety \\[@jacobsonDigitalBiomarkersAnxiety2022\\]), cognitive processes (craving \\[@epsteinPredictionStressDrug2020; @dumortierClassifyingSmokingUrges2016\\]; suicidal thoughts \\[@czyzPredictingShorttermSuicidal2023\\]), and even future mental health diagnoses (@horwitzIntensiveLongitudinalAssessment2024) can be predicted with high accuracy and temporal precision from personal sensing data.\n",
+    "Personal sensing data can be used as inputs into machine learning algorithms to predict important clinical psychological outcomes. Existing literature suggests behavior (substance use \\[@wyantMachineLearningModels2024; @wyantLaggedPredictionsNextinprep; @baeMobilePhoneSensors2018; @waltersUsingMachineLearning2021; @robertsUsingMachineLearning2022; @baeLeveragingMobilePhone2023; @soysterPooledPersonspecificMachine2022\\]), mood (depression \\[@jacobsonPassiveSensingPrediction2020; @kimDepressionPredictionUsing2019; @razaviDepressionScreeningUsing2020\\]; anxiety \\[@jacobsonDigitalBiomarkersAnxiety2022\\]), cognitive processes (craving \\[@epsteinPredictionStressDrug2020; @dumortierClassifyingSmokingUrges2016\\]; suicidal thoughts \\[@czyzPredictingShorttermSuicidal2023\\]), and even future mental health diagnoses (@horwitzIntensiveLongitudinalAssessment2024) can be predicted with high accuracy and temporal precision from personal sensing data.\n",
     "\n",
-    "Many mental health disorders, like substance use disorders, depression, and schizophrenia, are chronic conditions. After initial treatment and symptom reduction, individuals must continue to monitor their symptoms. Machine learning models can help individuals self-monitor their risk for risk for symptom-relapse and provide information about the top features contributing to their risk.\n",
+    "Many mental health disorders, like substance use disorders, depression, and anxiety, are chronic conditions. After initial treatment and symptom reduction, individuals must continue to monitor their symptoms indefinitely.\n",
     "\n",
-    "The existing successful prediction models have almost exclusively relied on ecological momentary assessment (EMA) as the primary personal sensing data collection method. EMA is…\n",
+    "Machine learning models can help individuals self-monitor changes in their risk for symptom-relapse and provide information about intervenable targets for lowering their risk (e.g., urge surfing for strong craving, behavioral activation for low motivation, and mindful breathing for acute and distressing physiological arousal).\n",
     "\n",
-    "EMA offers insight into known risk-relevant feelings, thoughts and behaviors. As such it is not surprising that it has been demonstrated to be highly predictive of lapse.\n",
+    "The existing successful prediction models have almost exclusively relied on ecological momentary assessment (EMA) as the primary personal sensing data collection method. EMA consists of daily or more frequent brief self-report surveys pushed to an individual’s smartphone (i.e., prompts).\n",
     "\n",
-    "EMA items are also often easily mapped on to support recommendations and targets for interventions. For example, in the relapse prevention model there are established tools and clinical recommendations for coping with strong cravings, stressful situations, and risky situations.\n",
+    "EMA offers insight into feelings, thoughts and behaviors. As such it is not surprising that it has been demonstrated to be highly predictive of clinical psychological outcomes.\n",
     "\n",
-    "Typically these models rely on densely sampled EMA (e.g. 4 times daily). While it appears frequent EMA sampling can be sustainable for discrete sampling periods (e.g. 1-3 months) \\[@wyantAcceptabilityPersonalSensing2023; @jonesComplianceEcologicalMomentary2019\\]. It is less clear whether such sampling rates can be maintained indefinitely (as is the case for lapse monitoring, where a lapse can occur at any point in one’s recovery and recovery is considered to be a dynamic and long term path).\n",
+    "EMA items are also often easily mapped on to support recommendations and targets for interventions. For example, the relapse prevention literature for substance use provides extant evidence-based recommendations for coping with strong cravings, stressful situations, and risky situations \\[@marlattRelapsePreventionSecond2007; @witkiewitzTherapistsGuideEvidenceBased2007\\].\n",
     "\n",
-    "For example, frequent prompts each day could become burdensome and engagement becomes sparse. Similarly individuals could become bored with the repetitive nature of questions leading to careless or automatic responding.\n",
+    "EMA models that predict substance use with high temporal precision (i.e., alcohol use in the next 1-24 hours) have relied on densely sampled EMA (4-8x daily \\[@wyantMachineLearningModels2024; @wyantLaggedPredictionsNextinprep; @waltersUsingMachineLearning2021; @soysterPooledPersonspecificMachine2022\\]). While it appears frequent EMA sampling can be sustainable for discrete sampling periods (e.g. 1-3 months) \\[@wyantAcceptabilityPersonalSensing2023; @jonesComplianceEcologicalMomentary2019\\], it is less clear whether such sampling rates can be maintained indefinitely. Some evidence suggests individuals with substance use disorders can maintain 1x daily EMA for up to 1 year \\[@moshontzProspectivePredictionLapses2021\\]. Still, recovery is dynamic and often lifelong.\n",
     "\n",
-    "@wyantMachineLearningModels2024 have developed a machine learning model that can predict alcohol lapse risk using 4x daily EMA.\n",
+    "@wyantMachineLearningModels2024 have developed a machine learning model using 4x daily EMA that can predict alcohol lapses occurring in the next 24 hours with high accuracy (.90 area under the ROC curve \\[auROC\\]). This model can be used to provide personalized support recommendations to address immediate risks for possible lapses. For example, the model can be updated each day to provide individuals information about changes in their risk and make supportive recommendations based on the top features contributing to their risk.\n",
     "\n",
-    "We seek to apply a precision medicine approach to EMA sampling so that individuals are only prompted to complete an EMA analysis when the information is needed to for accurate lapse predictions.\n",
+    "While this model suggests promising clinical utility, frequent prompts each day could become burdensome. Engagement with the sensing method could drop leading to sparse feature sets. Similarly, individuals could become bored with the repetitive nature of questions, increasing the likelihood of careless or automatic responding without reflection.\n",
+    "\n",
+    "Recognizing these limitations, we seek to apply a precision medicine approach to EMA sampling where individuals are only prompted to complete an EMA when the information is needed to maintain accurate lapse predictions.\n",
     "\n",
     "Specifically we ran a stimulation study that…\n",
     "\n",
@@ -87,7 +89,7 @@
     "\n",
     "Models were run on an NVIDIA GeForce RTX 3090. <!--lets talk about what this is and if its important to include. If we keep it maybe add a sentence about why it was important to the analyses.-->"
    ],
-   "id": "7563fa32-ed04-4cf0-9aaf-913102a92194"
+   "id": "b89bac96-fc86-434d-9405-266e696d6b6e"
   },
   {
    "cell_type": "raw",
@@ -97,7 +99,7 @@
    "source": [
     "<!--Should we include a sentence saying models were trained and evaluated using Python (Version #) and list any major packages used?-->"
    ],
-   "id": "1736b3c2-2ebe-4e8a-9bd6-c5b60eb956dd"
+   "id": "ecb1fec3-1be3-41f3-b5e4-ae4aace93c5a"
   },
   {
    "cell_type": "markdown",
@@ -111,7 +113,7 @@
     "\n",
     "More specifically, our training pipeline can be described as consisting of three networks (summarizer network, policy network, prediction network; @fig-method)."
    ],
-   "id": "f9ec24dc-823b-4f6a-a51f-9edd79d78f5b"
+   "id": "6dd42758-a7c5-4054-8476-06d1feff16cc"
   },
   {
    "cell_type": "code",
@@ -137,7 +139,7 @@
    "source": [
     "#### 1. Summarizer Network"
    ],
-   "id": "797ffe2a-d9a7-4d42-aa02-8628c64722e4"
+   "id": "feea3850-5f20-4207-bdf6-47a9fa5549e7"
   },
   {
    "cell_type": "raw",
@@ -147,7 +149,7 @@
    "source": [
     "<!--I'm not sure what a summarizer network is. Maybe explain it in a few sentences.-->"
    ],
-   "id": "2d7d048a-6f47-485f-b8b6-63aa2c1e0aed"
+   "id": "070306a6-f842-4e2d-ad39-3ec0d5ad85b9"
   },
   {
    "cell_type": "markdown",
@@ -161,7 +163,7 @@
     "\n",
     "New trajectories are generated with φ and the current policy π, which takes a summary statistics φ(ht) as an input and outputs the next action. π is updated to maximize the long-term returns of the system. <!--update math notation-->"
    ],
-   "id": "cecabb7f-ff81-4217-8e4f-ef705fc3e180"
+   "id": "1bc9048e-c7cc-4c5b-a39f-597730b446dc"
   },
   {
    "cell_type": "raw",
@@ -171,7 +173,7 @@
    "source": [
     "<!--Does this make sense to put here?-->"
    ],
-   "id": "9ad6a9ce-fae8-4041-b9fe-5efb2721b242"
+   "id": "ded03b45-6e52-46d2-9214-804ac12e4709"
   },
   {
    "cell_type": "markdown",
@@ -179,7 +181,7 @@
    "source": [
     "We considered four penalty levels (LV) that penalized the model for each survey observation shown: -.02, -.05, -.08, and -.12. Models also learned from penalties and rewards related to the accuracy of their predicted lapses. Models were rewarded .05 or .03 for correctly labeling a lapse or no lapse, respectively. Models were penalized -.2 or -1.2 for incorrectly labeling a lapse or no lapse, respectively. <!--How did you arrive at these reward/penalty values? Were they randomly selected?-->"
    ],
-   "id": "ef14561e-4137-4bb2-af79-f3f8cd05d1e2"
+   "id": "ce805b86-1135-4d2c-9b1b-07abb1c527d0"
   },
   {
    "cell_type": "raw",
@@ -189,7 +191,7 @@
    "source": [
     "<!--Add Partially Observed Markov Decision Processes and Objective Formulation and Algorithm 1 here?-->"
    ],
-   "id": "c0d0c489-9829-49c1-9972-466d458725fb"
+   "id": "81bfd62c-71f2-4b86-b4a0-2a8d3d854f2d"
   },
   {
    "cell_type": "markdown",
@@ -229,7 +231,7 @@
     "\n",
     "Figure @fig-ema presents histograms that display the distribution of the proportion of EMA observations revealed for each participant."
    ],
-   "id": "9a425246-f48b-4801-9237-877124544222"
+   "id": "b25be0d3-6384-4145-b1d4-d1f65be1d1c4"
   },
   {
    "cell_type": "raw",
@@ -239,7 +241,7 @@
    "source": [
     "<!-- note these plots depict 3 proportions for each subid - 1 for each repeat-->"
    ],
-   "id": "ae499553-c755-4d44-a297-44fd1e8bcb16"
+   "id": "3ee19b17-5880-4095-a34c-8064a6adad45"
   },
   {
    "cell_type": "code",
@@ -275,7 +277,7 @@
    "source": [
     "There doesn’t appear to be a relationship between lapse and proportion of EMA surveys revealed."
    ],
-   "id": "a56bfad3-ffab-4c2b-a833-ec46e6ea4aee"
+   "id": "8318aa7c-0bef-4df9-98fa-48dba6e2de22"
   },
   {
    "cell_type": "code",
@@ -301,7 +303,7 @@
     "       x = \"proportion of EMA surveys revealed\",\n",
     "       y = \"proportion of study days with lapses\")"
    ],
-   "id": "4688f214-7082-4620-92ff-6a2317005f36"
+   "id": "8ffa9f6b-a118-482a-8086-07de8032733f"
   },
   {
    "cell_type": "markdown",
@@ -311,7 +313,7 @@
     "\n",
     "Raw median auROCs for xgboost and five neural net models are presented below."
    ],
-   "id": "1137573c-88f6-4066-b568-09eb7e074153"
+   "id": "6bb30b42-3604-4d4a-8a47-4fe3dfb1da7b"
   },
   {
    "cell_type": "code",
@@ -341,7 +343,7 @@
     "  summarise(across(xgboost:nn_lv4, ~median(.x))) |> \n",
     "  glimpse() "
    ],
-   "id": "9298593b-ae77-44d8-afe8-9819547b7c3c"
+   "id": "4d4f1a33-3cbd-4dba-bfc9-59a6bc03f028"
   },
   {
    "cell_type": "markdown",
@@ -349,7 +351,7 @@
    "source": [
     "Median posterior probabilities and 95% Bayesian credible intervals for auROC for the XGBoost and 5 neural network models are presented in the table below."
    ],
-   "id": "c102fe09-10c3-4f15-b77f-ec468b755947"
+   "id": "2a1173f8-5bf1-4556-be45-c8bc971fdeb9"
   },
   {
    "cell_type": "code",
@@ -380,7 +382,7 @@
     "pp_tibble |> \n",
     "  kableExtra::kbl(digits = 3)"
    ],
-   "id": "7221014e-30bc-43b2-b11f-907c50fb6e40"
+   "id": "352493d9-fbb6-45f3-b35a-b1dece2443d3"
   },
   {
    "cell_type": "markdown",
@@ -388,7 +390,7 @@
    "source": [
     "Potential main figure"
    ],
-   "id": "38370ddd-b1a0-4325-b96d-61c1548bc71c"
+   "id": "d63e9e60-36e1-4721-88ad-6fc7cdbaa8f7"
   },
   {
    "cell_type": "code",
@@ -418,7 +420,7 @@
     "  labs(color = NULL) +\n",
     "  theme(legend.position = \"bottom\")"
    ],
-   "id": "335cdcce-d788-4674-b68c-285f16fea4af"
+   "id": "a3442dfb-aede-4d78-8385-c45f7e1f8473"
   },
   {
    "cell_type": "markdown",
@@ -426,7 +428,7 @@
    "source": [
     "Histograms of posterior probabilities for auROC for the 5 neural network models are presented below."
    ],
-   "id": "675d3632-92b5-4227-a526-57629729b2c4"
+   "id": "24dc253b-e37e-4597-93f1-8306548f977d"
   },
   {
    "cell_type": "code",
@@ -462,7 +464,7 @@
     "  xlab(\"Area Under ROC Curve\") +\n",
     "  theme_classic() "
    ],
-   "id": "d8c44d96-93ed-408b-927c-b1868ff2287d"
+   "id": "12d3083f-6ed9-4c93-a4af-482f55e78a0c"
   },
   {
    "cell_type": "markdown",
@@ -472,7 +474,7 @@
     "\n",
     "*Kendra will add a description of the model comparisons below once I see how we are referring to the different models. Essentially these comparisons suggest that we can go down to using about 40% of surveys (LV1) without any difference in model performance. It appears that the model does perform differently when going down to 25% of surveys (LV2) but this is not likely a clinically meaningful drop in performance. LV3 performs worse than LV1, but again it is not likely a clinically meaningful drop.*"
    ],
-   "id": "3c47c5bd-7f87-4997-9aa6-e9f78385302e"
+   "id": "e85277e8-d7f3-4a49-b00a-721bec50220a"
   },
   {
    "cell_type": "code",
@@ -501,7 +503,7 @@
     "contrasts |> \n",
     "  kableExtra::kbl(digits = 3)"
    ],
-   "id": "59cb822b-c4a1-4096-bba1-b88d1c92135d"
+   "id": "cf78db51-76a7-487e-9840-2d0c67d07588"
   }
  ],
  "nbformat": 4,
