--- a/references.bib
+++ b/references.bib
@@ -68,24 +68,6 @@
   file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\525AS6D2\\Chih et al. - 2014 - Predictive Modeling of Addiction Lapses in a Mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\AJDAP67X\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\AKNIS7HY\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\DX62KEH7\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\T9CDTXJ7\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\VXECTSNS\\Chih2014.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\D7AQLFGL\\S0740547213001827.html}
 }
 
-@article{chihPredictiveModelingAddiction2014b,
-  title = {Predictive Modeling of Addiction Lapses in a Mobile Health Application},
-  author = {Chih, Ming-Yuan and Patton, Timothy and McTavish, Fiona M. and Isham, Andrew J. and {Judkins-Fisher}, Chris L. and Atwood, Amy K. and Gustafson, David H.},
-  year = {2014},
-  month = jan,
-  journal = {Journal of Substance Abuse Treatment},
-  volume = {46},
-  number = {1},
-  pages = {29--35},
-  issn = {07405472},
-  doi = {10.1016/j.jsat.2013.08.004},
-  urldate = {2020-12-10},
-  abstract = {The chronically relapsing nature of alcoholism leads to substantial personal, family, and societal costs. Addiction-Comprehensive Health Enhancement Support System (A-CHESS) is a smartphone application that aims to reduce relapse. To offer targeted support to patients who are at risk of lapses within the coming week, a Bayesian network model to predict such events was constructed using responses on 2,934 weekly surveys (called the Weekly Check-in) from 152 alcohol-dependent individuals who recently completed residential treatment. The Weekly Check-in is a self-monitoring service, provided in A-CHESS, to track patients' recovery progress. The model showed good predictability, with the area under receiver operating characteristic curve of 0.829 in the 10-fold cross-validation and 0.912 in the external validation. The sensitivity/ specificity table assists the tradeoff decisions necessary to apply the model in practice. This study moves us closer to the goal of providing lapse prediction so that patients might receive more targeted and timely support.},
-  langid = {english},
-  keywords = {Alcoholism,Lapse prediction,Machine learning,mHealth,Relapse},
-  file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\AHW6D88H\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\XUW6CKQE\\Chih et al. - 2014 - Predictive modeling of addiction lapses in a mobil.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\BVKAMRV5\\S0740547213001827.html}
-}
-
 @article{czyzPredictingShorttermSuicidal2023,
   title = {Predicting Short-Term Suicidal Thoughts in Adolescents Using Machine Learning: Developing Decision Tools to Identify Daily Level Risk after Hospitalization},
   shorttitle = {Predicting Short-Term Suicidal Thoughts in Adolescents Using Machine Learning},
@@ -243,6 +225,19 @@
   file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\C3R85EHT\\Kim et al. - 2019 - Depression Prediction by Using Ecological Momentar.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\M4A25KUI\\e14149.html}
 }
 
+@book{marlattRelapsePreventionSecond2007,
+  title = {Relapse {{Prevention}}, {{Second Edition}}: {{Maintenance Strategies}} in the {{Treatment}} of {{Addictive Behaviors}}},
+  shorttitle = {Relapse {{Prevention}}, {{Second Edition}}},
+  editor = {Marlatt, G. Alan and Donovan, Dennis M.},
+  year = {2007},
+  month = dec,
+  edition = {2nd edition},
+  publisher = {The Guilford Press},
+  address = {New York London},
+  isbn = {978-1-59385-641-0},
+  langid = {english}
+}
+
 @article{mohrPersonalSensingUnderstanding2017,
   title = {Personal {{Sensing}}: {{Understanding Mental Health Using Ubiquitous Sensors}} and {{Machine Learning}}},
   shorttitle = {Personal {{Sensing}}},
@@ -331,6 +326,24 @@
   file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\YAPN8VX9\\Roberts et al. - 2022 - Using machine learning to predict heavy drinking d.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\XB3T76HL\\acer.html}
 }
 
+@article{soysterPooledPersonspecificMachine2022,
+  title = {Pooled and Person-Specific Machine Learning Models for Predicting Future Alcohol Consumption, Craving, and Wanting to Drink: {{A}} Demonstration of Parallel Utility},
+  shorttitle = {Pooled and Person-Specific Machine Learning Models for Predicting Future Alcohol Consumption, Craving, and Wanting to Drink},
+  author = {Soyster, Peter D. and Ashlock, Leighann and Fisher, Aaron J.},
+  year = {2022},
+  month = may,
+  journal = {Psychology of Addictive Behaviors: Journal of the Society of Psychologists in Addictive Behaviors},
+  volume = {36},
+  number = {3},
+  pages = {296--306},
+  issn = {1939-1501},
+  doi = {10.1037/adb0000666},
+  abstract = {BACKGROUND AND AIMS: The specific factors driving alcohol consumption, craving, and wanting to drink, are likely different for different people. The present study sought to apply statistical classification methods to idiographic time series data in order to identify person-specific predictors of future drinking-relevant behavior, affect, and cognitions in a college student sample. DESIGN: Participants were sent 8 mobile phone surveys per day for 15 days. Each survey assessed the number of drinks consumed since the previous survey, as well as positive affect, negative affect, alcohol craving, drinking expectancies, perceived alcohol consumption norms, impulsivity, and social and situational context. Each individual's data were split into training and testing sets, so that trained models could be validated using person-specific out-of-sample data. Elastic net regularization was used to select a subset of a set of 40 variables to be used to predict either alcohol consumption, craving, or wanting to drink, forward in time. SETTING: A west-coast university. PARTICIPANTS: Thirty-three university students who had consumed alcohol in their lifetime. MEASUREMENTS: Mobile phone surveys. FINDINGS: Averaging across participants, accurate out-of-sample predictions of future drinking were made 76\% of the time. For craving, the mean out-of-sample R{$^2$} value was .27. For wanting to drink, the mean out-of-sample R{$^2$} value was .27. CONCLUSION: Using a person-specific constellation of psychosocial and temporal variables, it may be possible to accurately predict drinking behavior, affect, and cognitions before they occur. (PsycInfo Database Record (c) 2022 APA, all rights reserved).},
+  langid = {english},
+  pmid = {35041441},
+  keywords = {Alcohol Drinking,Craving,Ethanol,Humans,Machine Learning,Students,Universities}
+}
+
 @article{waltersUsingMachineLearning2021,
   title = {Using Machine Learning to Identify Predictors of Imminent Drinking and Create Tailored Messages for At-Risk Drinkers Experiencing Homelessness},
   author = {Walters, Scott T. and Businelle, Michael S. and Suchting, Robert and Li, Xiaoyin and H{\'e}bert, Emily T. and Mun, Eun-Young},
@@ -345,6 +358,21 @@
   abstract = {Adults experiencing homelessness are more likely to have an alcohol use disorder compared to adults in the general population. Although shelter-based treatments are common, completion rates tend to be poor, suggesting a need for more effective approaches that are tailored to this understudied and underserved population. One barrier to developing more effective treatments is the limited knowledge of the triggers of alcohol use among homeless adults. This paper describes the use of ecological momentary assessment (EMA) to identify predictors of ``imminent drinking'' (i.e., drinking within the next 4 h), among a sample of adults experiencing homelessness and receiving health services at a homeless shelter. A total of 78 mostly male (84.6\%) adults experiencing homelessness (mean age = 46.6) who reported hazardous drinking completed up to five EMAs per day over 4 weeks (a total of 4557 completed EMAs). The study used machine learning techniques to create a drinking risk algorithm that predicted 82\% of imminent drinking episodes within 4 h of the first drink of the day, and correctly identified 76\% of nondrinking episodes. The algorithm included the following 7 predictors of imminent drinking: urge to drink, having alcohol easily available, feeling confident that alcohol would improve mood, feeling depressed, lower commitment to being alcohol free, not interacting with someone drinking alcohol, and being indoors. The research team used the results to develop intervention content (e.g., brief tailored messages) that will be delivered when imminent drinking is detected in an upcoming intervention phase. Specifically, we created three theoretically grounded message tracks focused on urge/craving, social/availability, and negative affect/mood, which are further tailored to a participant's current drinking goal (i.e., stay sober, drink less, no goal) to support positive change. To our knowledge, this is the first study to develop tailored intervention messages based on likelihood of imminent drinking, current drinking triggers, and drinking goals among adults experiencing homelessness.},
   langid = {english},
   file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\EAAIHL4X\\Walters et al. - 2021 - Using machine learning to identify predictors of i.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\EP3GANHN\\Walters et al. - 2021 - Using machine learning to identify predictors of i.pdf}
+}
+
+@book{witkiewitzTherapistsGuideEvidenceBased2007,
+  title = {Therapist's {{Guide}} to {{Evidence-Based Relapse Prevention}}},
+  editor = {Witkiewitz, Katie A. and Marlatt, G. Alan},
+  year = {2007},
+  month = mar,
+  edition = {1st edition},
+  publisher = {Academic Press},
+  address = {Amsterdam ; Boston},
+  abstract = {Describes the evidence-based approaches to preventing relapse of major mental and substance-related disorders. Therapist's Guide to Evidence-based Relapse Prevention combines the theoretical rationale, empirical data, and the practical "how-to" for intervention programs.The first section will serve to describe the cognitive-behavioral model of relapse and provide a general introduction to relapse prevention techniques. While Section II will focus on specific problem areas, Section III will focus on diverse populations and treatment settings.},
+  isbn = {978-0-12-369429-4},
+  langid = {english},
+  keywords = {Clinical Practice,Evidence Based Practice,Intervention,Relapse Prevention},
+  file = {C:\Users\kpaquette2\Zotero\storage\L7XXSHJW\2006-23175-000.html}
 }
 
 @article{wyantAcceptabilityPersonalSensing2023,
