--- a/index.qmd
+++ b/index.qmd
@@ -69,24 +69,25 @@ lapses <- read_csv(here("data/lapses.csv"),
 
 Personal sensing is the collection and analyses of data collected via smartphone and other digital devices in the context of one's day-to-day life [@mohrPersonalSensingUnderstanding2017]. 
 
-Personal sensing data can be used as inputs into machine learning algorithms to predict important psychological clinical outcomes. Existing literature suggests behavior (substance use [@wyantMachineLearningModels2024; @wyantLaggedPredictionsNextinprep; @chihPredictiveModelingAddiction2014; @businelleUsingIntensiveLongitudinal2016; @hebertPredictingFirstSmoking2021; @baeMobilePhoneSensors2018; @waltersUsingMachineLearning2021; @robertsUsingMachineLearning2022; @baeLeveragingMobilePhone2023]), mood (depression [@jacobsonPassiveSensingPrediction2020; @kimDepressionPredictionUsing2019; @razaviDepressionScreeningUsing2020]; anxiety [@jacobsonDigitalBiomarkersAnxiety2022]), cognitive processes (craving [@epsteinPredictionStressDrug2020; @dumortierClassifyingSmokingUrges2016]; suicidal thoughts [@czyzPredictingShorttermSuicidal2023]), and even future mental health diagnoses (@horwitzIntensiveLongitudinalAssessment2024) can be predicted with high accuracy and temporal precision from personal sensing data. 
+Personal sensing data can be used as inputs into machine learning algorithms to predict important clinical psychological outcomes. Existing literature suggests behavior (substance use [@wyantMachineLearningModels2024; @wyantLaggedPredictionsNextinprep; @baeMobilePhoneSensors2018; @waltersUsingMachineLearning2021; @robertsUsingMachineLearning2022; @baeLeveragingMobilePhone2023; @soysterPooledPersonspecificMachine2022]), mood (depression [@jacobsonPassiveSensingPrediction2020; @kimDepressionPredictionUsing2019; @razaviDepressionScreeningUsing2020]; anxiety [@jacobsonDigitalBiomarkersAnxiety2022]), cognitive processes (craving [@epsteinPredictionStressDrug2020; @dumortierClassifyingSmokingUrges2016]; suicidal thoughts [@czyzPredictingShorttermSuicidal2023]), and even future mental health diagnoses (@horwitzIntensiveLongitudinalAssessment2024) can be predicted with high accuracy and temporal precision from personal sensing data. 
 
-Many mental health disorders, like substance use disorders, depression, and schizophrenia, are chronic conditions. After initial treatment and symptom reduction, individuals must continue to monitor their symptoms. 
-Machine learning models can help individuals self-monitor their risk for risk for symptom-relapse and provide information about the top features contributing to their risk.
+Many mental health disorders, like substance use disorders, depression, and anxiety, are chronic conditions. After initial treatment and symptom reduction, individuals must continue to monitor their symptoms indefinitely. 
 
-The existing successful prediction models have almost exclusively relied on ecological momentary assessment (EMA) as the primary personal sensing data collection method. EMA is...
+Machine learning models can help individuals self-monitor changes in their risk for symptom-relapse and provide information about intervenable targets for lowering their risk (e.g., urge surfing for strong craving, behavioral activation for low motivation, and mindful breathing for acute and distressing physiological arousal).
 
-EMA offers insight into known risk-relevant feelings, thoughts and behaviors. As such it is not surprising that it has been demonstrated to be highly predictive of lapse. 
+The existing successful prediction models have almost exclusively relied on ecological momentary assessment (EMA) as the primary personal sensing data collection method. EMA consists of daily or more frequent brief self-report surveys pushed to an individual's smartphone (i.e., prompts).
 
-EMA items are also often easily mapped on to support recommendations and targets for interventions. For example, in the relapse prevention model there are established tools and clinical recommendations for coping with strong cravings, stressful situations, and risky situations.
+EMA offers insight into feelings, thoughts and behaviors. As such it is not surprising that it has been demonstrated to be highly predictive of clinical psychological outcomes. 
 
-Typically these models rely on densely sampled EMA (e.g. 4 times daily). While it appears frequent EMA sampling can be sustainable for discrete sampling periods (e.g. 1-3 months) [@wyantAcceptabilityPersonalSensing2023; @jonesComplianceEcologicalMomentary2019]. It is less clear whether such sampling rates can be maintained indefinitely (as is the case for lapse monitoring, where a lapse can occur at any point in one’s recovery and recovery is considered to be a dynamic and long term path). 
+EMA items are also often easily mapped on to support recommendations and targets for interventions. For example, the relapse prevention literature for substance use provides extant evidence-based recommendations for coping with strong cravings, stressful situations, and risky situations [@marlattRelapsePreventionSecond2007; @witkiewitzTherapistsGuideEvidenceBased2007].
 
-For example, frequent prompts each day could become burdensome and engagement becomes sparse. Similarly individuals could become bored with the repetitive nature of questions leading to careless or automatic responding. 
+EMA models that predict substance use with high temporal precision (i.e., alcohol use in the next 1-24 hours) have relied on densely sampled EMA (4-8x daily [@wyantMachineLearningModels2024; @wyantLaggedPredictionsNextinprep; @waltersUsingMachineLearning2021; @soysterPooledPersonspecificMachine2022]). While it appears frequent EMA sampling can be sustainable for discrete sampling periods (e.g. 1-3 months) [@wyantAcceptabilityPersonalSensing2023; @jonesComplianceEcologicalMomentary2019], it is less clear whether such sampling rates can be maintained indefinitely. Some evidence suggests individuals with substance use disorders can maintain 1x daily EMA for up to 1 year [@moshontzProspectivePredictionLapses2021]. Still, recovery is dynamic and often lifelong. 
 
-@wyantMachineLearningModels2024 have developed a machine learning model that can predict alcohol lapse risk using 4x daily EMA. 
+@wyantMachineLearningModels2024 have developed a machine learning model using 4x daily EMA that can predict alcohol lapses occurring in the next 24 hours with high accuracy (.90 area under the ROC curve [auROC]). This model can be used to provide personalized support recommendations to address immediate risks for possible lapses. For example, the model can be updated each day to provide individuals information about changes in their risk and make supportive recommendations based on the top features contributing to their risk.
 
-We seek to apply a precision medicine approach to EMA sampling so that individuals are only prompted to complete an EMA analysis when the information is needed to for accurate lapse predictions. 
+While this model suggests promising clinical utility, frequent prompts each day could become burdensome. Engagement with the sensing method could drop leading to sparse feature sets. Similarly, individuals could become bored with the repetitive nature of questions, increasing the likelihood of careless or automatic responding without reflection.
+
+Recognizing these limitations, we seek to apply a precision medicine approach to EMA sampling where individuals are only prompted to complete an EMA when the information is needed to maintain accurate lapse predictions. 
 
 Specifically we ran a stimulation study that…
 
